--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     				console.log('init');
 
-    				FB.Event.subscribe('auth.authResponseChange', function(response) {
+    				FB.getLoginStatus( function(response) {
 							if (response.status === 'connected') {
 								testAPI();
 							} else if (response.status === 'not_authorized') {
