--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 									} else {
 										console.log("Login Cancelled");
 									}
-								}, {scope: 'name', 'read_stream', 'publish_stream'}
+								}, {scope: 'name, read_stream, publish_stream'}
 								);
 							}
 
