--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
    						for(var i=0, j=response.data.length; i<j; i++) {
    							var info = response.data[i];
    							if (info.message) {
-   								$(#usergul).append('<br>'+info.message);
+   								$('#usergul').append('<br>'+info.message);
    							}
    						}
 
