--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		      	    for (element in response.data){
 		         	   post = response.data[element]
 		     	       if (post.message) {
-								$('#usergul').append('<br>'+info.message);
+								$('#usergul').append('<br>'+post.message);
 							}  
 		     	    }
 
