--- a/usr/index.html
+++ b/usr/index.html
@@ -4,13 +4,15 @@
 		<meta charset = "utf-8">
 		<title>페이스북 욕설/초성어 통계기</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-		<script src="/socket.io/socket.io.js"></script>
+		<!-- <script src="../node_modules/socket.io/node_modules/socket.io-client/dist/socket.io.js"></script> */ -->
+		<script src="/usr/socket.io.js"></script>
+
    		<!-- <link rel="href" stylesheet="style.css" /> -->
   		
 	</head>
 	<body>
 		<div id="fb-root"></div>
-		테스트
+		테스트2
 		<br>
 		<div id="userirm">이름</div>
 		<div id="usergul">목록</div>
@@ -22,7 +24,7 @@
 			var yok =
 			[
 				'Fuck', 'Shit', '뻨', '쒵', '쓑', '쒯', '개새끼', '개시끼', '개세끼', '개색기', '개색끼', '개객끼', '개객기', '개같은', '개놈', '개년', '개자식', '씨발', '씨벌', '씨불', '씹할', '씨팔', '씨벨', '씨부랄', '씨부럴', '씨팔', '씨펄', 'ㅅㅂ', 'ㅆㅂ', '씹창', '씹년', '씹놈', '좆', '존나', 'ㅈㄴ', '미친놈', '미친년', '미친새끼', '엄창', '앰창', '니미', '병신', '븅신', '븅딱', '퓽신', '비융신', '피융신', 'ㅄ', 'ㅂㅅ', '지랄', '닥쳐', '盧?', '젠장', '빌어먹을', '빌어쳐먹을', '빌어처먹을', '제기랄'
-			]
+			];
 			foreach(kind in yok) {
 				var cound[kind] = 0;
 			}
