--- a/usr/index.html
+++ b/usr/index.html
@@ -4,7 +4,7 @@
 		<meta charset = "utf-8">
 		<title>페이스북 욕설/초성어 통계기</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-		<script src="../node_modules/socket.io/node_modules/socket.io-client/dist/socket.io.js"></script>
+		<script src="socket.io/socket.io.js"></script>
 
    		<!-- <link rel="href" stylesheet="style.css" /> -->
   		
