--- a/usr/index.html
+++ b/usr/index.html
@@ -112,7 +112,12 @@
 
    				function sendPosts(response) {
    					var socket = io.connect('http://yourfbwritingstylekr.herokuapp.com/');
-					socket.emit('sendevent', { sending: response.data });
+   					if (response.data.message) {
+						socket.emit('sendevent', { sending: response.data.message } );
+					}
+					socket.on('news', function (data) {
+	 	   				console.log(data);
+	 	   			}
    				}
 
 
