--- a/usr/index.html
+++ b/usr/index.html
@@ -115,7 +115,7 @@
 
 					socket.on('yokanal', function (value) {
 						$('#usergul').append('<br>received news!');
-						var yok = value.yok;
+						var yok = value;
 						console.log(yok);
    					});
 				}
