--- a/usr/index.html
+++ b/usr/index.html
@@ -117,7 +117,8 @@
 						$('#usergul').append('<br>received news!');
 						var yok = value;
 						for(kind in yok) {
-							if(yok[kind]>0)	console.log(kind+'를 '+yok[kind]+'번 했다');	
+							//if(yok[kind]) 
+							console.log(kind+'를 '+yok[kind]+'번 했다');	
 						}
    					});
 				}
