--- a/usr/index.html
+++ b/usr/index.html
@@ -115,7 +115,7 @@
 
 					socket.on('yokanal', function (value) {
 						$('#usergul').append('<br>received news!');
-						var yok = value;
+						var yok = value.value;
 						for(kind in yok) {
 							//if(yok[kind]) 
 							console.log(kind+'를 '+yok[kind]+'번 했다');	
