--- a/usr/index.html
+++ b/usr/index.html
@@ -118,7 +118,7 @@
 						var yok = value.value;
 						for(kind in yok) {
 							//if(yok[kind]) 
-							console.log(kind+'를 '+yok[kind]+'번 했다');	
+							console.log(yok);	
 						}
    					});
 				}
