--- a/usr/index.html
+++ b/usr/index.html
@@ -115,9 +115,8 @@
 
 					socket.on('yokanal', function (value) {
 						$('#usergul').append('<br>received news!');
-						var yok = value;
+						var yok = value.value;
 						console.log(yok);
-						console.log(yok.value);
 
 						//for(kind in yok) {
 							//if(yok[kind]) 
