--- a/usr/index.html
+++ b/usr/index.html
@@ -116,7 +116,7 @@
 					socket.on('yokanal', function (value) {
 						$('#usergul').append('<br>received news!');
 						var yok = value.value;
-						console.log(yok);
+						console.log(yok['젠장']);
 
 						//for(kind in yok) {
 							//if(yok[kind]) 
