--- a/usr/index.html
+++ b/usr/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset = "utf-8">
-		<title>페이스북 욕설/초성어 통계기</title>
+		<title>페이스북 초성어 통계기</title>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 
@@ -21,30 +21,32 @@
 
 			$(document).ready( function() {
 
-				var yokdb =
+				var chodb =
 				[
-					'ㅋ', '?', '젠장'
-					/*
-					[
+					'ㅋ', 'ㄴ', 'ㅇ', 'ㄳ', 'ㅅㄱ', 'ㄷ', '?', '盧', 'ㅈㄹ',
+					//포함특수
+					'ㄷㅊ', 'ㅁㄴㅇㄹ', 'ㅈㄴ'
+					/* 	[
 		'Fuck', 'Shit', '뻨', '쒵', '쓑', '쒯', '개새끼', '개시끼', '개세끼', '개색기', '개색끼', '개객끼', '개객기', '개같은', '개놈', '개년', '개자식', '씨발', '씨벌', '씨불', '씹할', '씨팔', '씨벨', '씨부랄', '씨부럴', '씨팔', '씨펄', 'ㅅㅂ', 'ㅆㅂ', '씹창', '씹년', '씹놈', '좆', '존나', 'ㅈㄴ', '미친놈', '미친년', '미친새끼', '엄창', '앰창', '니미', '병신', '븅신', '븅딱', '퓽신', '비융신', '피융신', 'ㅄ', 'ㅂㅅ', '지랄', '닥쳐', '盧?', '젠장', '빌어먹을', '빌어쳐먹을', '빌어처먹을', '제기랄'
 	]; */
 				];
-				var yok = new Array();
-				for (index in yokdb) {
-					yok[index] = 0;
+				var 
+				var cho = new Array();
+				for (index in chodb) {
+					cho[index] = 0;
 				}
-				console.log(yokdb); console.log(yok);
+				console.log(chodb); console.log(cho);
 
 				var yokpos;
 				function search(string, pos, index) {
-					if((yokpos = string.indexOf(yokdb[index], pos)) != -1) {
-						yok[index]++;
-						console.log(yokdb[index]+'검출로 '+yok[index]+'개');
+					if((yokpos = string.indexOf(chodb[index], pos)) != -1) {
+						cho[index]++;
+						console.log(chodb[index]+'검출로 '+cho[index]+'개');
 						search(string, yokpos + index.length, index);
 					}
 				}
 				function findyok(string) {
-					for (index in yokdb) {
+					for (index in chodb) {
 						search(string, 0, index);
 					}
 				}
@@ -68,9 +70,9 @@
     				FB.getLoginStatus( function(response) {
 							if (response.status === 'connected') {
 								testAPI();
-								//console.log(yok);
+								//console.log(cho);
 								readStream();
-								//console.log(yok);
+								//console.log(cho);
 							} else if (response.status === 'not_authorized') {
 								FB.login( function(response) { 
 									if(response.authResponse) {
@@ -144,13 +146,14 @@
 
 
 
-					socket.on('yokanal', function (value) {
+					socket.on('choanal', function (value) {
 						$('#usergul').append('<br>received news!');
-						var yok = value.anal;
-						console.log(yok);
+						var cho = value.anal;
+						var cho2 = value.anal2;
+						console.log(cho); console.log(cho2);
 
-						//for(kind in yok) {
-							//if(yok[kind]) 
+						//for(kind in cho) {
+							//if(cho[kind]) 
 						//	console.log(kind);
 						//}
    					});
