--- a/usr/index.html
+++ b/usr/index.html
@@ -148,8 +148,8 @@
 					socket.on('choanal', function (value) {
 						$('#usergul').append('<br>received news!');
 						var cho = value.anal;
-						var cho2 = value.anal2;
-						console.log(cho); console.log(cho2);
+						//var cho2 = value.anal2;
+						console.log(cho); //console.log(cho2);
 
 						//for(kind in cho) {
 							//if(cho[kind]) 
