--- a/usr/index.html
+++ b/usr/index.html
@@ -6,7 +6,7 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 
-   		<link rel="stylesheet" type-"text/css" href="style.css" />
+   		<link rel="stylesheet" type-"text/css" href="/usr/style.css" />
   		
 	</head>
 	<body>
@@ -21,7 +21,7 @@
 				<br>아무짝에도 쓸모 없는 서비스입니다.
 			</div>
 			<br>
-			<div id='button'><a href='/start'>시작하기</a></div>
+			<div id='button'>시작하기</div>
 
 		</div>
 		<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="500px" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
