--- a/usr/index.html
+++ b/usr/index.html
@@ -6,7 +6,7 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
 		<script src="/socket.io/socket.io.js"></script>
 
-   		<link rel="stylesheet" type-"text/css" href="/usr/style.css" />
+   		<link rel="stylesheet" type-"text/css" href="/style" />
   		
 	</head>
 	<body>
