--- a/usr/index.html
+++ b/usr/index.html
@@ -21,7 +21,7 @@
 				<br>아무짝에도 쓸모 없는 서비스입니다.
 			</div>
 			<br>
-			<div id='button'>시작하기</div>
+			<div id='button'><a>시작하기</a></div>
 
 		</div>
 		<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="500px" data-layout="standard" data-action="like" data-show-faces="true" data-share="true"></div>
@@ -39,7 +39,7 @@
 				}(document, 'script', 'facebook-jssdk'));
 
 				$('#button').click(function() {
-
+					start();
 				} );
 
 
