--- a/usr/index.html
+++ b/usr/index.html
@@ -97,7 +97,7 @@
 	    							usrInfo();
 									console.log('페이스북 담벼락 불러오기 시작...');
 									readStream();
-									$('#button').animate({opacity:0.3, width:120, height:0, margin:auto}, 300, 'linear').children('a').css('display', 'none');
+									$('#button').animate({opacity:0.3, width:120, height:0, margin:0}, 300, 'linear').children('a').css('display', 'none');
 									$('#userirm').html(response.name+'님').addClass('bb');
 	    						}
 
@@ -174,6 +174,8 @@
 					} // readStream
 					function updateabox(cho) {
 						$('#abox').html('');
+						chodb.sort(function(a,b) { cho[a]>cho[b] });
+						cho.sort();
 						for(index in cho) {
 							if(cho[index]>0)
 								$('#abox').append(	chodb[index]+' : '+cho[index]+"회<br>"	);
