--- a/usr/index.html
+++ b/usr/index.html
@@ -93,21 +93,21 @@
 
 	    				FB.getLoginStatus( function(response) {
 	    						
-	    						function start2() {
+	    						function start2(repsonse) {
 	    							usrInfo();
 									console.log('페이스북 담벼락 불러오기 시작...');
 									readStream();
-									$('#button').animate({opacity:0.3, width:120, height:0, margin:0}, 300, 'linear').children('a').css('display', 'none');
+									$('#button').animate({opacity:0.6, height:0, margin:0}, 300, 'ease').children('a').css('display', 'none');
 									$('#userirm').html(response.name+'님').addClass('bb');
 	    						}
 
 								if (response.status === 'connected') {
-									start2();
+									start2(response);
 
 								} else if (response.status === 'not_authorized') {
 									FB.login( function(response) { 
 										if(response.authResponse) {
-											start2();
+											start2(repsonse);
 										} else {
 											console.log("Authorization Cancelled");
 										}
@@ -174,8 +174,6 @@
 					} // readStream
 					function updateabox(cho) {
 						$('#abox').css('display', 'block').html('');
-						chodb.sort(function(a,b) { cho[a]<cho[b] });
-						cho.sort();
 						for(index in cho) {
 							if(cho[index]>0)
 								$('#abox').append(	chodb[index]+' : '+cho[index]+"회<br>"	);
