--- a/usr/index.html
+++ b/usr/index.html
@@ -11,14 +11,16 @@
 	</head>
 	<body>
 		<div id="fb-root"></div>
-		<div id="bar"><a href="#">페이스북 초성어 통계기</a></div>
+		<div id="bar"><a href="#"><strong>페이스북 초성어 통계기</strong></a></div>
 		
 		<div id = "content">
 			<div id="intro">
-				<div class='bb'>페이스북 초성어 통계기</div>는
+				<div style='font-style:italic; font-size:20px' class='bb'>어서오세요</div>
+				<div class='bb'>페이스북 초성어 통계기 beta</div>는
 				<br> <div id='userirm'>당신</div>의 담벼락 글을 분석해
 				<br>초성어 및 기호 사용 통계를 내주는
 				<br>아무짝에도 쓸모 없는 서비스입니다.
+				<br><strong>※[베타 서비스] 기능 추가중.</strong>
 			</div>
 			<br>
 			<div id='button'><a>시작하기</a></div>
@@ -107,7 +109,7 @@
 								} else if (response.status === 'not_authorized') {
 									FB.login( function(response) { 
 										if(response.authResponse) {
-											start2(repsonse);
+											start2(respsonse);
 										} else {
 											console.log("Authorization Cancelled");
 										}
