--- a/usr/index.html
+++ b/usr/index.html
@@ -11,12 +11,13 @@
 	</head>
 	<body>
 		<div id="fb-root"></div>
-		<div id="bar"><a href="#"><strong>페이스북 초성어 통계기</strong></a></div>
+		<div id="bar"><a href="#"><strong>페이스북 초성어 통계기 beta</strong></a></div>
 		
 		<div id = "content">
 			<div id="intro">
 				<div style='font-style:italic; font-size:20px' class='bb'>어서오세요</div>
-				<div class='bb'>페이스북 초성어 통계기 beta</div>는
+				<br>
+				<div class='bb'>페이스북 초성어 통계기</div>는
 				<br> <div id='userirm'>당신</div>의 담벼락 글을 분석해
 				<br>초성어 및 기호 사용 통계를 내주는
 				<br>아무짝에도 쓸모 없는 서비스입니다.
@@ -95,11 +96,11 @@
 
 	    				FB.getLoginStatus( function(response) {
 	    						
-	    						function start2(repsonse) {
+	    						function start2(response) {
 	    							usrInfo();
 									console.log('페이스북 담벼락 불러오기 시작...');
 									readStream();
-									$('#button').animate({opacity:0.6, height:0, margin:0}, 300, 'ease').children('a').css('display', 'none');
+									$('#button').animate({opacity:0.6, height:0, margin:0}, 300).children('a').css('display', 'none');
 									$('#userirm').html(response.name+'님').addClass('bb');
 	    						}
 
