--- a/usr/index.html
+++ b/usr/index.html
@@ -176,7 +176,7 @@
 						$('#abox').css('display', 'block').html('');
 						for(index in cho) {
 							if(cho[index]>0)
-								$('#abox').append('<div id='aline'>'+chodb[index]+' : '+cho[index]+"회</div><br>").children('#aline').slideDown(150);
+								$('#abox').append('<div id="aline">'+chodb[index]+' : '+cho[index]+"회</div><br>").children('#aline').slideDown(150);
 						}
 					}
 
