--- a/usr/index.html
+++ b/usr/index.html
@@ -174,7 +174,7 @@
 						$('#abox').css('display', 'block').html('');
 						for(index in cho) {
 							if(cho[index]>0)
-								$('#abox').append('<div>'+chodb[index]+' : '+cho[index]+"회</div>").children().not('.ani').addClass('ani').slideDown(500);
+								$('#abox').append('<div class="ani">'+chodb[index]+' : '+cho[index]+"회</div>").children('.ani').slideDown(500).removeClass('ani');
 						}
 					}
 
