--- a/usr/index.html
+++ b/usr/index.html
@@ -173,9 +173,10 @@
 					function updateabox(cho) {
 						$('#abox').css('display', 'block').html('');
 						for(index in cho) {
-							if(cho[index]>0)
-								$('#abox').append('<div class="ani">'+chodb[index]+' : '+cho[index]+"회</div>").children().is('.ani').slideDown(500).removeClass('ani');
+							if(cho[index]>0) 
+								$('#abox').append('<div class="ani">'+chodb[index]+' : '+cho[index]+"회</div>");
 						}
+						$('.ani').slideDown(500).removeClass('ani');
 					}
 
 
