--- a/usr/index.html
+++ b/usr/index.html
@@ -171,7 +171,11 @@
 	   					});
 					} // readStream
 					function updateabox(cho) {
-						$('#abox').css('display', 'block').html('').animate( {width:338px, background-color:#BBB}, 100, function() { $('#abox').animate( {width:330px, background-color:#AAA}, 150); } );
+						$('#abox').css('display', 'block').html('').
+						animate( {width:338px, background-color:#BBB},
+							100,
+							function()
+							{ $('#abox').animate( {width:330px, background-color:#AAA}, 150); } );
 						for(index in cho) {
 							if(cho[index]>0) 
 								$('#abox').append('<div>'+chodb[index]+' : '+cho[index]+"회</div>");
