--- a/usr/index.html
+++ b/usr/index.html
@@ -171,8 +171,8 @@
 	   					});
 					} // readStream
 					function updateabox(cho) {
-						$('#abox').css('display', 'block').html('').
-						animate({backgroundColor:'#FFF'}, 400, function() { $('#abox').animate({backgroundColor:'#BBB'}, 600); } );
+						$('#abox').css('display', 'block').html('').flash('#FFF', 800);
+						
 						for(index in cho) {
 							if(cho[index]>0) 
 								$('#abox').append('<div>'+chodb[index]+' : '+cho[index]+"회</div>");
